--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; Mohammed Shanavas Z</p>
     </footer>
 
     <script>
